--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,22 @@
 server{
     listen 80;
-
-    location /{
+    
+    location / {
         root /var/www/html;
         index index.html;
 
-        #fallback
+        #fallback para resolver o problema das rotas
         try_files $uri $uri/ /index.html;
     }
+
+    # configuração do proxy-reverso
+
+    # location /api/ {
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header Host $http_host;
+    
+    #     proxy_pass http://api-register:3003;
+    # }
+    
 }
